# grok

./: .gitignore  .meta.toml  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  CHANGES.txt  COPYRIGHT.txt  CREDITS.txt  INSTALL.rst  INSTALL.txt  MANIFEST.in  README.branch.txt  README.md  README.rst  README.txt  TODO.txt  buildout.cfg  buildout.cfg.orig  buildout.cfg1  documentation.cfg  documentation_deployment.cfg  ftesting.zcml  grok.cfg  grokwiki.cfg  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.py.1  setup.py.orig  tox.ini  versions.cfg  versions1.cfg  versions_notes.txt
.github/workflows/: tests.yml
addressbook/: setup.py
addressbook/src/addressbook/: addressbook.py  configure.zcml
doc/: ACKS.txt  README.rst  about.rst  about_grok.txt  api.rst  bugs.rst  changes.rst  conf.py  contents.rst  copyright.rst  developing_grok.rst  docindex.template  glossary.rst  grok2html.py  grok2pdf.sh  grok_overview.rst  grok_overview.txt  grok_rules.txt  index.rst  index.txt  layout.html  license.rst  naming_conventions.txt  pygments_code_block_directive.py  release.txt  setup.py  sprint2.txt  style.tex  template.pt  tutorial.rst  tutorial.txt  tutorial_outline.txt  upgrade.rst  upgrade.txt
doc/.static/: default.css  grok.css
doc/_build/: Makefile  make.bat
doc/design/: adapters.py  annotations.py  container.py  grok_beginner.txt  grok_dev.txt  menu.py  model.py  permission.py  skin-minimal.py  skin.py  subscriber.py  traversal.py  utility.py  views.py  widget.py
doc/examples/: MOVED.txt
doc/examples/bookshelf/: TODO.txt
doc/groktut/: INSTALL.txt  bootstrap.py  buildout.cfg  buildout_tut.cfg
doc/groktut/a_second_model/: bootstrap.py
doc/groktut/a_second_view/: buildout.cfg
doc/groktut/a_view_for_a_model2/: bootstrap.py
doc/minitutorials/: automatic_form_generation.rst  index.rst  index.txt  macros.rst  macros.txt  permissions.rst  permissions.txt  rest.txt  searching.txt  template-languages.txt  transient-objects.rst  transient-objects.txt  xmlrpc.txt
doc/reference/: README.txt  TODO.txt  components.rst  components.tex  conf.py  contents.rst  core.rst  core.tex  decorators.rst  decorators.tex  directives.rst  directives.tex  events.rst  events.tex  exceptions.rst  exceptions.tex  functions.rst  functions.tex  index.rst  mkgrokref.py  model.rst  model.tex  reference.tex  testing.rst  utils.rst
docs/: Makefile  api.rst  conf.py  copyright.rst  make.bat
docs/_build/: Makefile  make.bat
etc/: debug.ini.in  deploy.ini.in  site.zcml.in  zdaemon.conf.in  zope.conf.in
grokblog/: README.txt  setup.py
grokcore.component/: setup.py
grokcore.grok/: README.txt  setup.py
grokdocs/: README.txt  setup.py
grokwiki/: README.txt  setup.py
ldapaddressbook/: README.txt  setup.py
mars.contentprovider/: setup.py
mars.layer/: setup.py
mars.macro/: setup.py
mars.resource/: setup.py
mars.template/: setup.py
mars.view/: setup.py
mars.viewlet/: setup.py
martian/: CREDITS.txt  README.txt  buildout.cfg  setup.py
megrok.layer/: setup.py
megrok.template/: setup.py
megrok.view/: setup.py
megrok.viewlet/: setup.py
src/grok/: __init__.py  _grok.py  adapter.txt  components.py  configure.zcml  decorators.py  default.zcml  dependencies.zcml  directive.py  error.py  events.py  formlib.py  ftesting.zcml  generations.py  grokker.py  i18n.py  index.py  interfaces.py  meta.py  meta.zcml  metaconfigure.py  metadirectives.py  publication.py  rest.py  scan.py  security.py  templatereg.py  testing.py  util.py  zcml.py
src/grokdoctool/: grok.xslt  rst2html.py  rst2html.xslt
utilities/: merge-versions.py
utitilies/: merge-versions.py
(+800 files in other folders)
